UPDATE: add markdown headers and adjust execution counts in Basic_Train_Day1_temp.ipynb

--- a/Basic_Train_Day1_temp.ipynb
+++ b/Basic_Train_Day1_temp.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Init"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -12,26 +19,9 @@
     "import time\n",
     "from ansys.aedt.core import Maxwell3d\n",
     "from ansys.aedt.core import Maxwell2d\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "AEDT_VERSION = \"2025.1\"\n",
     "NUM_CORES = 8\n",
-    "NG_MODE = False  # Open AEDT UI when it is launched."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "NG_MODE = False  # Open AEDT UI when it is launched.\n",
     "BaseDir=\"D:\\EM_KDH\\Moa_Edu_Sim\\Basic\""
    ]
   },
@@ -111,7 +101,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 경계조건"
+    "## 경계조건 -miller"
    ]
   },
   {
@@ -134,6 +124,11 @@
    "source": [
     "수학자에게 설명하자면, 우리는 경계가 B와 D의 녹색 선 또는 A와 C의 빨간색 선인 영역 안 또는 그 위에서 맥스웰 방정식(특히 라플라스 방정식)의 해를 찾고 있다는 것입니다. 이것이 바로 경계값 문제의 본질입니다. 유한 요소 해법은 경계 밖에서 일어나는 일에 대해 침묵하며, 이는 (사용자로서) 내가 영역의 경계를 정의한 사람이기 때문에 (자연 또는 대칭을 선택하여 정확한 수학적 용어로) 전적으로 적절합니다. 따라서 유한 요소 해법에서 그 경계 밖의 조건에 대한 데이터를 찾는 것은 부적절하며, 유한 요소 소프트웨어가 그러한 데이터를 제공하는 것도 마찬가지로 부적절합니다. (당연한 일이다!)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -416,7 +411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -425,9 +420,18 @@
      "text": [
       "PyAEDT INFO: Python version 3.11.11 | packaged by Anaconda, Inc. | (main, Dec 11 2024, 16:34:19) [MSC v.1929 64 bit (AMD64)]\n",
       "PyAEDT INFO: PyAEDT version 0.11.7.\n",
-      "PyAEDT INFO: Returning found Desktop session with PID 53972!\n",
-      "PyAEDT INFO: No project is defined. Project Maxw_GS_ES_PC1 exists and has been read.\n",
-      "PyAEDT INFO: Active Design set to Maxw_3DES_PC1\n",
+      "PyAEDT INFO: Initializing new Desktop session.\n",
+      "PyAEDT INFO: Log on console is enabled.\n",
+      "PyAEDT INFO: Log on file C:\\Users\\MOAVRXP\\AppData\\Local\\Temp\\pyaedt_MOAVRXP_29b850af-75cc-4098-9aa2-814ff587fd59.log is enabled.\n",
+      "PyAEDT INFO: Log on AEDT is enabled.\n",
+      "PyAEDT INFO: Debug logger is disabled. PyAEDT methods will not be logged.\n",
+      "PyAEDT INFO: Launching PyAEDT with gRPC plugin.\n",
+      "PyAEDT INFO: New AEDT session is starting on gRPC port 58985\n",
+      "PyAEDT INFO: AEDT installation Path C:\\Program Files\\ANSYS Inc\\v251\\AnsysEM\n",
+      "PyAEDT INFO: Ansoft.ElectronicsDesktop.2025.1 version started with process ID 5920.\n",
+      "PyAEDT INFO: Project Project5 has been created.\n",
+      "PyAEDT INFO: No design is present. Inserting a new design.\n",
+      "PyAEDT INFO: Added design 'Maxwell 3D_983' of type Maxwell 3D.\n",
       "PyAEDT INFO: Aedt Objects correctly read\n"
      ]
     }
@@ -443,17 +447,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "PyAEDT INFO: Modeler class has been initialized! Elapsed time: 0m 0sec\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# m3dOdesign=m3d.odesign\n",
     "# m3dOdesign.SetSolutionType(\"Electrostatics\")\n",
@@ -491,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -518,20 +514,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<ansys.aedt.core.modules.boundary.MaxwellParameters at 0x2bf1a602650>"
-      ]
-     },
-     "execution_count": 115,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "m3d.assign_matrix([\"downVoltage\",\"upVoltage\"],'Matrix1')"
    ]
@@ -545,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -569,20 +554,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "PyAEDT INFO: Key Desktop/ActiveDSOConfigurations/Maxwell 3D correctly changed.\n",
-      "PyAEDT INFO: Solving all design setups.\n",
-      "PyAEDT INFO: Key Desktop/ActiveDSOConfigurations/Maxwell 3D correctly changed.\n",
-      "PyAEDT INFO: Design setup None solved correctly in 0.0h 0.0m 13.0s\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "m3d.valid_design\n",
     "m3dAnalyObj=m3d.analyze()"
@@ -1097,7 +1071,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Eddy "
+    "## 3D-MS "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "m3d = Maxwell3d(\n",
+    "    # project=\"D:\\EM_KDH\\Moa_Edu_Sim\\Basic\\CylinderCapacitor.aedt\",\n",
+    "    version=AEDT_VERSION,\n",
+    "    new_desktop=False,\n",
+    "    non_graphical=NG_MODE,\n",
+    ")"
    ]
   },
   {
@@ -1282,7 +1277,7 @@
    "metadata": {},
    "source": [
     "- gradient operator : $\\nabla$\n",
-    "-  $\\vec{A}$ Normal to Boundary : $\\vec{A} \\cdot \\vec{n}\n",
+    "-  $\\vec{A}$ Normal to Boundary : $\\vec{A} \\cdot \\vec{n}$\n",
     "- Gradient of  $\\vec{A} \\cdot \\vec{n} : \\nabla (\\vec{A} \\cdot \\vec{n})$"
    ]
   },
@@ -1384,6 +1379,27 @@
     "#### [2D/3D]\n",
     "Matching (Independent/Dependent)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Eddy Current"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
